--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,38 @@
 /*! purgecss start ignore */
 @tailwind base;
 @tailwind components;
+
+.st0 {
+  fill-rule: evenodd;
+  clip-rule: evenodd;
+}
+.st1 {
+  fill-rule: evenodd;
+  clip-rule: evenodd;
+  fill: none;
+  stroke: #000000;
+  stroke-width: 10;
+  stroke-linecap: square;
+  stroke-miterlimit: 3;
+}
+.screaming {
+  font-size: 8rem;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  @apply font-sans font-black;
+}
+p {
+  @apply font-sans font-medium mt-3 text-2xl leading-9 text-gray-900;
+  font-family: Open Sans;
+}
+.screaming {
+  @apply font-black;
+}
+
 /*! purgecss end ignore */
+
 @tailwind utilities;
